# rust-wasm-js-sample

./: .gitignore  Cargo.toml  README.md  package.json  serve.json
lib/wasm-sample/: package.json
public/: index.html
scripts/: bundle.js  clean.js
src/js/: index.js
src/rust/: functions.rs  internal.rs  js.rs  lib.rs  structs.rs
src/rust/js/: console.rs
