[package]
name = "wasm-sample"
description = "Rust sample code for generating WASM."
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/rust/lib.rs"

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2"
